--- a/eim_backend/package.json
+++ b/eim_backend/package.json
@@ -4,5 +4,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^4.1.4"
+  },
+  "scripts": {
+    "server": "node eim_server.js"
   }
 }
